(target): improved basic block handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(stitch)
 
 set(CMAKE_CXX_STANDARD 23)
 set(STITCH_STATIC_LIB stitch)
+option(STITCH_BUILD_EXAMPLES "Build examples" ON)
 
 # dependencies
 add_subdirectory(deps)
@@ -37,4 +38,21 @@ add_subdirectory(src/target)
 
 target_sources(${STITCH_STATIC_LIB} PRIVATE ${STITCH_SRC})
 
+include(CTest)
+
+set(STITCH_TEST_DIR ${CMAKE_SOURCE_DIR}/unittests/testdata)
+
+macro(stitch_add_test TEST_NAME)
+    add_executable(${TEST_NAME} ${TEST_NAME}.cc)
+    target_link_libraries(${TEST_NAME} PRIVATE ${STITCH_STATIC_LIB})
+    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME} WORKING_DIRECTORY ${STITCH_TEST_DIR})
+endmacro()
+
+macro(stitch_add_test_with_sources TEST_NAME)
+    add_executable(${TEST_NAME} ${ARGN})
+    target_link_libraries(${TEST_NAME} PRIVATE ${STITCH_STATIC_LIB})
+    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME} WORKING_DIRECTORY ${STITCH_TEST_DIR})
+endmacro()
+
 add_subdirectory(unittests)
+add_subdirectory(examples)
