refactors and new example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,4 +4,5 @@ if(STITCH_BUILD_EXAMPLES)
     stitch_add_test(x86_move_fn_branching)
     stitch_add_test(x86_opaque_pred)
     stitch_add_test(x86_global_ref)
+    stitch_add_test(x86_complex_obf)
 endif ()
