--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,4 +5,5 @@ if(STITCH_BUILD_EXAMPLES)
     stitch_add_test(x86_opaque_pred)
     stitch_add_test(x86_global_ref)
     stitch_add_test(x86_complex_obf)
+    stitch_add_test(x86_shellcode)
 endif ()
