--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -10,4 +10,4 @@ option(ZASM_BUILD_BENCHMARKS "" OFF)
 option(ZASM_BUILD_EXAMPLES "" OFF)
 FetchContent_MakeAvailable(zasm)
 
-target_link_libraries(${STITCH_STATIC} PUBLIC zasm)
+target_link_libraries(${LIBSTITCH} PUBLIC zasm)
